objects/CGC_Milestone_and_Exercise__c.object
<CustomObject>
    <fields>
        <fullName>Completed_Ex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_On__c</fullName>
        <label>Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <formula>IF( Completion_Percentage__c  &gt;= 100,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Percentage__c</fullName>
        <formula>(  Current_Value__c  /  Total_Target_Value__c  )  * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <label>Current Value</label>
        <summarizedField>CGC_Milestone_Progress_V2__c.Progress_Value__c</summarizedField>
        <summaryForeignKey>CGC_Milestone_Progress_V2__c.Milestone_and_Exercise__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This field is used by data tool to upsert appropriate data in the xDO environment.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lesson_Description__c</fullName>
        <label>Lesson Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MilestoneIsTrue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MilestoneIsTrue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Outcome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Program Outcome</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <referenceTo>CGC_Section__c</referenceTo>
        <relationshipName>Milestones_and_Exercises</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Target_Value__c</fullName>
        <label>Total Target Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Link</fullName>
                </value>
                <value>
                    <fullName>Audio Recording</fullName>
                </value>
                <value>
                    <fullName>Scheduled Event</fullName>
                </value>
                <value>
                    <fullName>Trailhead</fullName>
                </value>
                <value>
                    <fullName>Lesson</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Demo Milestone and Exercise</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Section__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ME-{0000}</displayFormat>
        <label>Milestones and Exercises</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Milestones and Exercises</pluralLabel>
    <recordTypes>
        <fullName>Exercise</fullName>
        <active>true</active>
        <label>Exercise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Milestone</fullName>
        <active>true</active>
        <label>Milestone</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>